# SmartMoisture-MSP430

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  msp430.yaml
cad/: Enclosure.FCStd
lib/: msp430-toolchain.cmake  msp430.yaml  msp430f5529.ccxml  msp430fr2433.ccxml  msp430g2553.ccxml
src/: main.c  max.c  oled.c
src/include/: config.h  max.h  oled.h
